2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/registration/icp.hh: Cleanup some debug.

2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/geom/rotate.hh: Add support for n-D images.

2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/algebra/mat.hh: Add implementations for 4x4 matrices.

2012-05-25  Guillaume Lazzara  <z@lrde.epita.fr>

	New routines to get bottom left and top right sites.

	* mln/geom/bottom_left.hh,
	* mln/geom/top_right.hh: New.

	* mln/geom/all.hh: Add includes.

2012-05-25  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve conversion between algebra::h_mat and algebra::quat.

	* mln/algebra/h_mat.hh,
	* mln/algebra/quat.hh: New from_to_ overloads.

	* mln/fun/x2x/rotation.hh: Make use of new make::h_mat overload.

	* mln/make/h_mat.hh: New overload using quaternion as argument.

	* mln/value/builtin/integers.hh: Add epsilon.

	* tests/algebra/h_mat.cc,
	* tests/make/h_mat.cc: Improve tests.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Rely on Argument-Dependent Lookup (ADL) in from_to_ overloads.

	* mln/accu/count_labels.hh,
	* mln/convert/from_to.hxx,
	* mln/convert/to.hh,
	* mln/core/alias/point1d.hh,
	* mln/core/alias/point2d.hh,
	* mln/core/alias/point3d.hh,
	* mln/core/dpoint.hh,
	* mln/core/internal/neighborhood_base.hh,
	* mln/core/point.hh,
	* mln/core/site_set/p_centered.hh,
	* mln/core/site_set/p_vaccess.hh,
	* mln/fun/v2v/hsl_to_rgb.hh,
	* mln/fun/v2v/rgb_to_hsl.hh,
	* mln/io/magick/save.hh,
	* mln/io/plot/save.hh,
	* mln/labeling/blobs_and_compute.hh,
	* mln/labeling/value_and_compute.hh,
	* mln/make/w_window2d.hh,
	* mln/win/multiple.hh,
	* mln/win/multiple_size.hh,
	* tests/accu/site_set/rectangularity.cc,
	* tests/core/other/graph_elt_neighborhood.cc,
	* tests/core/other/graph_elt_window.cc,
	* tests/core/other/point_set_compatibility.cc,
	* tests/draw/graph.cc: Update forward declarations and includes.

	* mln/algebra/vec.hh,
	* mln/convert/from_to.hh,
	* mln/convert/impl/from_double_to_value.hh,